// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible tests should match snapshot 1`] = `
<DocumentFragment>
  .emotion-3 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
  color: #323845;
  font-size: 0.875rem;
  height: 40px;
  width: auto;
  padding-left: 0.5rem;
  padding-right: 0.75rem;
  text-transform: none;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-3:hover {
  color: #214491;
  background-color: rgba(202,215,241,0.24);
}

.emotion-3:active {
  color: #1a3470;
  background-color: rgba(186,203,236,0.32);
}

.emotion-3:disabled {
  color: #898F9E;
}

.emotion-3 svg {
  width: 24px;
  min-width: 24px;
  height: 24px;
  min-height: 24px;
  margin: 0.25rem;
}

.emotion-3:hover {
  background-color: transparent;
}

.emotion-3:active {
  background-color: transparent;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 150ms ease;
  transition: transform 150ms ease;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  background-color: #FFFFFF;
  border-color: #E0E2E7;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
}

.emotion-7 .__admin-ui-collapsbile--header {
  padding: 1.5rem;
  padding-left: 0.5rem;
}

.emotion-7 .__admin-ui-collapsbile--content {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5 div>button:nth-of-type(n+2) {
  margin-left: 0.25rem;
}



<div
    class="emotion-7"
  >
    <header
      class="__admin-ui-collapsbile--header emotion-5"
    >
      <button
        aria-controls="mocked-id"
        aria-expanded="true"
        class="emotion-3"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              fill="none"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 14L12 10L8 14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
             Collapsible Label
          </div>
        </div>
      </button>
      <div
        class="emotion-4"
      />
    </header>
    <section
      id="mocked-id"
      style="height: 0px; opacity: 0;"
    >
      <div
        class="__admin-ui-collapsbile--content emotion-6"
      >
        Collapsible Content
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Collapsible tests should match snapshot with nesting collapsibles 1`] = `
<DocumentFragment>
  .emotion-3 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
  color: #323845;
  font-size: 0.875rem;
  height: 40px;
  width: auto;
  padding-left: 0.5rem;
  padding-right: 0.75rem;
  text-transform: none;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #8DB6FA;
}

.emotion-3:hover {
  color: #214491;
  background-color: rgba(202,215,241,0.24);
}

.emotion-3:active {
  color: #1a3470;
  background-color: rgba(186,203,236,0.32);
}

.emotion-3:disabled {
  color: #898F9E;
}

.emotion-3 svg {
  width: 24px;
  min-width: 24px;
  height: 24px;
  min-height: 24px;
  margin: 0.25rem;
}

.emotion-3:hover {
  background-color: transparent;
}

.emotion-3:active {
  background-color: transparent;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 150ms ease;
  transition: transform 150ms ease;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-15 {
  background-color: #FFFFFF;
  border-color: #E0E2E7;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
}

.emotion-15 .__admin-ui-collapsbile--header {
  padding: 1.5rem;
  padding-left: 0.5rem;
}

.emotion-15 .__admin-ui-collapsbile--content {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-5 div>button:nth-of-type(n+2) {
  margin-left: 0.25rem;
}



.emotion-13 {
  background-color: #FFFFFF;
  border-color: #E0E2E7;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
}

.emotion-13 .__admin-ui-collapsbile--header {
  padding: 1rem;
  padding-left: 0rem;
}

.emotion-13 .__admin-ui-collapsbile--content {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
}

<div
    class="emotion-15"
  >
    <header
      class="__admin-ui-collapsbile--header emotion-5"
    >
      <button
        aria-controls="mocked-id"
        aria-expanded="true"
        class="emotion-3"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              fill="none"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 14L12 10L8 14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
             Collapsible Label
          </div>
        </div>
      </button>
      <div
        class="emotion-4"
      />
    </header>
    <section
      id="mocked-id"
      style="height: 0px; opacity: 0;"
    >
      <div
        class="__admin-ui-collapsbile--content emotion-12"
      >
        <div
          class="emotion-13"
        >
          <header
            class="__admin-ui-collapsbile--header emotion-5"
          >
            <button
              aria-controls="mocked-id"
              aria-expanded="true"
              class="emotion-3"
              type="button"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-1"
                >
                  <svg
                    class="emotion-0"
                    fill="none"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16 14L12 10L8 14"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                   Collapsible Label
                </div>
              </div>
            </button>
            <div
              class="emotion-4"
            />
          </header>
          <section
            id="mocked-id"
            style="height: 0px; opacity: 0;"
          >
            <div
              class="__admin-ui-collapsbile--content emotion-12"
            >
              Collapsible Content
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
